# # DMFT_ED library
#Generate version module:
CONFIGURE_FILE(${LIB_SRC}/revision.in ${LIB_SRC}/KB_VERSION.f90 @ONLY)

FILE(GLOB KB_LIB_SRC
  KB_VERSION.f90
  KB_VARS_GLOBAL.f90
  KB_CONTOUR.f90
  KB_AUX.f90
  KB_GF_COMMON.f90
  KB_GF_IO.f90
  KB_GF_SUM.f90
  KB_GF_CONVOLUTE.f90
  KB_GF_VIE.f90
  KB_GF_FREE.f90
  KB_GF_DYSON.f90
  KB_GF_MAIN.f90
  KB_LIB.f90
  )
ADD_LIBRARY(KB_LIBRARY OBJECT ${KB_LIB_SRC})


